react-ui/src/components/Pledge/Pledge.scss
@import '../../variables';

.pledge-form {
    background: white;
    display: grid;
    grid-column-gap: 30px;
    grid-row-gap: .5em;
    grid-template-columns: repeat(2, [col] 50%) ;
    grid-template-rows: repeat(5, [row] auto);
}

.pledge-form-container {
    /* Allows the "Take a Pledge" button to lie alongside the full pledge of conduct dropdown button */
    @media(min-width: $pledge-form-breakpoint) {
        margin-bottom: -5em;
    }
}

input {
    box-sizing: border-box;
    width: 100%;
    /*border-radius: 4px; if we want rounded inputs*/
    border: 1px #eeeeee;
    background: #eeeeee;
    padding: 10px 15px;
    margin-bottom: 10px;
    font-size: 14px;
}

.col-1_row-1 {
    grid-column: col 1 / span 2;
    grid-row: row 1;
}

.col-1_row-2 {
    grid-column: col 1;
    grid-row: row 2;
}

.col-2_row-2 {
    grid-column: col 2;
    grid-row: row 2;
}

.col-1_row-3 {
    grid-column: col 1;
    grid-row: row 3;
}

.col-2_row-3 {
    grid-column: col 2;
    grid-row: row 3;
}

.col-1_row-4 {
    grid-column: col 1;
    grid-row: row 4;
}
.col-2_row-4 {
    grid-column: col 2;
    grid-row: row 4;
}
.col-1_row-5 {
    grid-column: col 1;
    grid-row: row 5;
    margin-top: 10px;
}

.col-1_row-6 {
    grid-column: col 1 / span 2;
    grid-row: row 6;
    margin-top: 10px;
}

select {
    display: block;
}

label {
    line-height: 2;
    text-align: left;
    margin-bottom: 13px;
    margin-top: 20px;
    color: #60269E;
    font-size: 14px;
    font-weight: bold;
}

.error {
  color: #bf1650;
}

.error::before {
  display: inline;
  content: "⚠ ";
}

